fail_crate/tests/wrong_type_after_pub.stderr
error: Expected boolean literal after `pub =`.
 --> fail_crate/tests/wrong_type_after_pub.rs:4:7
  |
4 | #[new(pub = "true")]
  |       ^^^^^
