fail_crate/tests/wrong_type_after_pub.rs
use inew::New;

#[derive(New)]
#[new(pub = "true")]
struct B;

fn main() {}
